--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "alurageek-api",
+  "name": "aluraflixapi",
   "version": "1.0.0",
-  "description": "Products for Alura Geek fake store api",
+  "description": "Links de AluraFLix",
   "main": "index.js",
   "scripts": {
     "start": "node api/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/SofiDevO/alurageek-API.git"
-  },
   "keywords": [
     "alura",
-    "alurageek",
+    "aluraflix",
     "json-server",
     "javascript",
     "API"
   ],
-  "author": "Sofidev, contact@itssofi.dev",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SofiDevO/alurageek-API/issues"
-  },
-  "homepage": "https://github.com/SofiDevO/alurageek-API#readme",
-  "dependencies": {
+    "dependencies": {
     "cors": "^2.8.5",
     "json-serve": "^0.1.0",
     "json-server": "^0.17.3"
